feat: add eslint, storybook, jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,31 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "moduleResolution": "node",
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "esnext",
+    "jsx": "preserve",
     "declaration": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
-    "removeComments": true,
-    "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es6",
     "sourceMap": false,
     "allowJs": false,
     "rootDir": "./src",
     "outDir": "./dist",
-    "lib": ["es2017"],
-    "baseUrl": "./"
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "typeRoots": ["./node_modules/@types"],
+    "lib": ["dom", "es2015", "es2016"],
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*", "tests"],
-  "exclude": ["node_modules", "**/*.spec.ts", "dist/**/*"]
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "server"],
+  "include": ["**/*.ts", "**/*.tsx"]
 }
