--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "format": "prettier --write **/*.{ts,tsx} --ignore-path ./.prettierignore",
-    "build": "tsc"
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "coverage": "jest --coverage",
+    "build": "rimraf -rf dist && tsc -p tsconfig.json",
+    "prepublish:npm": "npm run format && npm run lint && npm run test && npm run build",
+    "publish:npm": "npm publish --access public",
+    "build:storybook": "build-storybook",
+    "storybook": "start-storybook -p 3000"
   },
   "repository": {
     "type": "git",
@@ -23,10 +31,40 @@
   },
   "homepage": "https://github.com/greatSumini/react-facebook-login#readme",
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": ">= 15.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-storysource": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "./coverage"
   }
 }
