--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/greatSumini/react-facebook-login#readme",
   "peerDependencies": {
-    "react": ">= 15.3.0"
+    "react": "^16.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -50,6 +50,8 @@
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "react": "*",
+    "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
