build: fix tsconfig
- target, module: esnext -> es2015
- jsx: preserve -> react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "jsx": "preserve",
+    "target": "es2015",
+    "module": "es2015",
+    "jsx": "react",
     "declaration": true,
     "sourceMap": false,
     "allowJs": false,
