--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "coverage": "jest --coverage",
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "prepublish:npm": "npm run format && npm run lint && npm run test && npm run build",
+    "publish:npm": "npm run prepublish:npm && npm publish --public",
     "build:storybook": "build-storybook",
-    "storybook": "start-storybook -p 3000",
-    "prepublish": "npm run format && npm run lint && npm run test && npm run build"
+    "storybook": "start-storybook -p 3000"
   },
   "repository": {
     "type": "git",
