build: update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "removeComments": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
