--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "coverage": "jest --coverage",
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "prepublish:npm": "npm run format && npm run lint && npm run test && npm run build",
-    "publish:npm": "npm run prepublish:npm && npm publish --public",
+    "publish:npm": "npm publish --public",
     "build:storybook": "build-storybook",
     "storybook": "start-storybook -p 3000"
   },
