--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "description": "Well-typed React Component for Facebook Login",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "test": "jest",
+    "check:lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "check:type": "tsc --noEmit",
+    "check:test": "jest",
+    "check": "run-p check:*",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
@@ -54,6 +56,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "jest": "27.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
