--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "@babel/core": "7.16.0",
     "@storybook/addon-actions": "6.3.12",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "6.3.12",
     "@storybook/addon-storysource": "6.3.12",
     "@storybook/addons": "6.3.12",
