feat(): add FacebookLoginClient.clear

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "strictNullChecks": false
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx"]
