--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "jest": "28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.6.2",
     "react": "17.0.2",
